--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ env:
   - DB=postgresql
 script:
   - bundle exec rspec spec
+  - rake jasmine:ci
 before_script:
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate
