--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 env:
   - DB=postgresql
 script:
-  - bundle exec rspec spec
+  - bundle exec rake spec
   - rake jasmine:ci
 before_script:
   - bundle exec rake db:create RAILS_ENV=test
