--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,7 @@ before_script:
   - bundle exec rake db:create RAILS_ENV=test
   - bundle exec rake db:migrate
   - bundle exec rake db:test:prepare
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 bundler_args: --binstubs=./bundler_stubs
